cargo-features = ["edition2024"]

[package]
name = "olx-contract"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "3.0.0"
solana-system-interface = {version = "2.0.0", features = ["bincode"]}
bytemuck = {version = "1.23.2", features = ["derive"]}

[lib]
crate-type = ["cdylib", "lib"]

# Optional: Add these features for better builds
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1